# BetterJSONStorage

./: .gitignore  LICENSE.txt  README.rst  benchmark.py  callgrapht.py  citm.py  coverage.xml  empty.db  github.py  graph.py  program.prof  pyproject.toml  pytest.ini  random_100k.db  setup.cfg  setup.py  test.db
.github/workflows/: main.yml  python-app.yml  python-package.yml  run_tests.yml
BetterJSONStorage/: BetterJSONStorage.py  __init__.py
BetterJSONStorage.egg-info/: PKG-INFO  SOURCES.txt
benchmark/: timesheet.csv
benchmark/db/: test_citm.db  test_citm2.db
benchmark/prof/: better_init.prof  better_read.prof  better_write.prof  default_init.prof  default_read.prof  default_write.prof
blosc/: __init__.pyi
pytest/: BetterJSONStorage.py  coverage.xml  empty.db  test_citm.db  test_storage.py
src/BetterJSONStorage/: BetterJSONStorage.py  __init__.py
src/BetterJSONStorage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/betterJSONStorage/: BetterJSONStorage.py  __init__.py  corruption.py  test.py
tests/: citm.py  graph.py  random_100kb.json  table_tests.py  temp.json  test_canada.py  test_citm.db  test_citm.py  test_storage.py  test_twitter.py
tests/benchmark/: benchmark.py  citm.py  graph.py  timesheet.csv
tests/benchmark/db/: test_citm.db
tests/benchmark/prof/: better_init.prof  better_read.prof  better_write.prof  default_init.prof  default_read.prof  default_write.prof
tests/db/: test_canada.db  test_canada2.db  test_citm.db  test_citm2.db  test_twitter.db  test_twitter2.db
tests/json/: canada.json  citm_catalog.json
