[metadata]
name = BetterJSONStorage
version = 0.4.1
author = Thomas Eeckhout
author_email = Thomas.Eeckhout@outook.be
description = a tinyDB storage extension using a faster json compiler and compression
long_description = file: README.rst
url = https://github.com/MrPigss/BetterJSONStorage
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src